# insighter_admin_bot

./: .env  Dockerfile  admin_insight_bot_container.py  bot.py  pyproject.toml
.github/workflows/: deploy_workflow.yml  prod_deploy_workflow.yml  stage_deploy_workflow.yml
DB/Mongo/: mongo_db.py  mongo_enteties.py
config/: bot_configs.py
deploy/: docker-compose.yml
deploy/prod/: docker-compose.yml
deploy/stage/: docker-compose.yml
handlers/: command_handler.py  user_handler.py
keyboards/: inline_keyboards.py
project_logging/: loging_config.py
