[tool.poetry]
name = "admin-bot"
version = "0.1.0"
description = ""
authors = ["artemprod <artemprod1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
mongoengine = "^0.28.2"
aiogram = "^3.4.1"
redis = "^5.0.3"
environs = "^11.0.0"
ruff = "^0.3.3"
loguru = "^0.7.2"
logtail-python = "^0.2.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 180

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
# See definitions https://docs.astral.sh/ruff/rules/
select = [
    "ASYNC", # flake8-async
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "E",     # pycodestyle errors
    "F",     # Pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "SIM",   # flake8-simplify
    "T20",   # flake8-insighter_logger.info
    "TRIO",  # flake8-trio
    "S",     # flake8-bandit
    "LOG",  # flake8-logging
    "F",
    "D4",
    "PT",
    "PL"

]
fixable = ["ALL"]

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

